Still fixing spelling error in stylesheet link and adding h1 styling. Changed h1 color to #f9fafb to make it more visible against the dark background. (Also stolen from chat.deepseek.com)

--- a/HTML Front-End/styles.css
+++ b/HTML Front-End/styles.css
@@ -1,3 +1,6 @@
 body {
 	background-color: #151517;
 }
+h1 {
+	color: #f9fafb;
+}
